Started the desing for the input of the date

--- a/SecondAnniversary_Lior/Project_API/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Project_API/MainWindow.xaml
@@ -17,12 +17,16 @@
         </Style>
 
         <Style TargetType="TextBox">
-            <Setter Property="TextWrapping" Value="Wrap"/>
-            <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="FontFamily" Value="David"/>
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="FontSize" Value="32.5"/>
-            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="Foreground" Value="LightGray"/>
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="TextAlignment" Value="Center"/>
+            <Setter Property="TextDecorations" Value="Underline"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Height" Value="29"/>
+            <Setter Property="Width" Value="26"/>
         </Style>
 
     </Window.Resources>
@@ -40,11 +44,28 @@
             <TextBlock Text="Please enter a password to continue:"/>
         </StackPanel>
 
-        <!--<Border Grid.Row="1" CornerRadius="5" BorderThickness="1" BorderBrush="Black" Margin="10" Width="150" Height="33">
-            <TextBlock Text="ddmmyy" Foreground="LightGray" Margin="0"/>
-        </Border>-->
-        <TextBox Grid.Row="1" x:Name="tbPass" Background="Transparent" Height="34" Text="ddmmyy" Width="150"/>
-        
+        <Border Grid.Row="1" CornerRadius="5" BorderThickness="1.5" BorderBrush="Black" Margin="10, 5, 10, 0" Width="150" Height="33">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Text="d" Margin="0, 0, -1.6, 0"/>
+                <TextBox Text="d" Margin="-1.6, 0, -1.6, 0"/>
+                <TextBox Text="m" Margin="0"/>
+                <TextBox Text="m" Margin="0"/>
+                <TextBox Text="y" Margin="-1.6, 0, -1.6, 0"/>
+                <TextBox Text="y" Margin="-1.6, 0, 0, 0"/>
+            </StackPanel>
+        </Border>
+
+        <Border Grid.Row="1" CornerRadius="5" BorderThickness="1.5" BorderBrush="Black" Margin="10, 5, 10, 0" Width="150" Height="33">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Foreground="Black" TextDecorations="None" Margin="0, 0, -1.6, 0"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="0"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="0"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, 0, 0"/>
+            </StackPanel>
+        </Border>
+
         <TextBlock Grid.Row="2" Text="Please pay attention to the format of the password" 
                    FontSize="20" Foreground="Red" Margin="5"/>
 
@@ -53,7 +74,7 @@
                 MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
                 MouseLeftButtonDown="SendPass_MouseLeftButtonDown">
             <TextBlock Text="Send" Margin="0"/>
-        </Border> 
+        </Border>
 
     </Grid>
 </Window>
