--- a/SecondAnniversary_Lior/Project_API/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Project_API/MainWindow.xaml
@@ -45,7 +45,7 @@
         </StackPanel>
 
         <Border Grid.Row="1" CornerRadius="5" BorderThickness="1.5" BorderBrush="Black" Margin="10, 5, 10, 0" Width="150" Height="33">
-            <StackPanel Orientation="Horizontal">
+            <StackPanel x:Name="spDisplay" Orientation="Horizontal">
                 <TextBox Text="d" Margin="0, 0, -1.6, 0"/>
                 <TextBox Text="d" Margin="-1.6, 0, -1.6, 0"/>
                 <TextBox Text="m" Margin="0"/>
@@ -56,7 +56,7 @@
         </Border>
 
         <Border Grid.Row="1" CornerRadius="5" BorderThickness="1.5" BorderBrush="Black" Margin="10, 5, 10, 0" Width="150" Height="33">
-            <StackPanel Orientation="Horizontal">
+            <StackPanel x:Name="spDate" Orientation="Horizontal">
                 <TextBox Foreground="Black" TextDecorations="None" Margin="0, 0, -1.6, 0"/>
                 <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0"/>
                 <TextBox Foreground="Black" TextDecorations="None" Margin="0"/>
