--- a/SecondAnniversary_Lior/Project_API/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Project_API/MainWindow.xaml
@@ -46,12 +46,12 @@
 
         <Border Grid.Row="1" CornerRadius="5" BorderThickness="1.5" BorderBrush="Black" Margin="10, 5, 10, 0" Width="150" Height="33">
             <StackPanel x:Name="spDisplay" Orientation="Horizontal">
-                <TextBox Text="d" Margin="0, 0, -1.6, 0"/>
-                <TextBox Text="d" Margin="-1.6, 0, -1.6, 0"/>
-                <TextBox Text="m" Margin="0"/>
-                <TextBox Text="m" Margin="0"/>
-                <TextBox Text="y" Margin="-1.6, 0, -1.6, 0"/>
-                <TextBox Text="y" Margin="-1.6, 0, 0, 0"/>
+                <TextBox Text="d" Margin="0, 0, -1.6, 0" IsReadOnly="True"/>
+                <TextBox Text="d" Margin="-1.6, 0, -1.6, 0" IsReadOnly="True"/>
+                <TextBox Text="m" Margin="0" IsReadOnly="True"/>
+                <TextBox Text="m" Margin="0" IsReadOnly="True"/>
+                <TextBox Text="y" Margin="-1.6, 0, -1.6, 0" IsReadOnly="True"/>
+                <TextBox Text="y" Margin="-1.6, 0, 0, 0" IsReadOnly="True"/>
             </StackPanel>
         </Border>
 
