--- a/SecondAnniversary_Lior/Project_API/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Project_API/MainWindow.xaml
@@ -57,12 +57,12 @@
 
         <Border Grid.Row="1" CornerRadius="5" BorderThickness="1.5" BorderBrush="Black" Margin="10, 5, 10, 0" Width="150" Height="33">
             <StackPanel x:Name="spDate" Orientation="Horizontal">
-                <TextBox Foreground="Black" TextDecorations="None" Margin="0, 0, -1.6, 0"/>
-                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0"/>
-                <TextBox Foreground="Black" TextDecorations="None" Margin="0"/>
-                <TextBox Foreground="Black" TextDecorations="None" Margin="0"/>
-                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0"/>
-                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, 0, 0"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="0, 0, -1.6, 0" KeyUp="TextBox_KeyUp" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0" KeyUp="TextBox_KeyUp" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="0" KeyUp="TextBox_KeyUp" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="0" KeyUp="TextBox_KeyUp" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, -1.6, 0" KeyUp="TextBox_KeyUp" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                <TextBox Foreground="Black" TextDecorations="None" Margin="-1.6, 0, 0, 0" KeyUp="TextBox_KeyUp" PreviewKeyDown="TextBox_PreviewKeyDown"/>
             </StackPanel>
         </Border>
 
