--- a/SecondAnniversary_Lior/Birthday_Surprise/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Birthday_Surprise/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Birthday_Surprise"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        WindowStyle="None" AllowsTransparency="True" Background="Transparent" WindowState="Maximized">
     <Grid>
         
     </Grid>
