--- a/SecondAnniversary_Lior/Birthday_Surprise/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Birthday_Surprise/MainWindow.xaml
@@ -3,11 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Birthday_Surprise"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
         WindowStyle="None" AllowsTransparency="True" Background="Transparent" WindowState="Maximized">
     <Grid>
-        
+        <TextBlock x:Name="tx" FontSize="20" Text="Happy Birthday" Foreground="White"/>
     </Grid>
 </Window>
