--- a/SecondAnniversary_Lior/Project_API/SongPlayer.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongPlayer.xaml
@@ -16,11 +16,11 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         
-        <Image Grid.Column="0" Source="/images/shuffle.png" MouseLeftButtonDown="Shuffle_Click" />
+        <Image Grid.Column="0" Source="/images/shuffle_off.png" MouseLeftButtonDown="Shuffle_Click" />
         <Image Grid.Column="1" Source="/images/start.png" MouseLeftButtonDown="Start_Click" />
         <Image Grid.Column="2" Source="/images/play.png" MouseLeftButtonDown="Play_Click" />
         <Image Grid.Column="3" Source="/images/next.png" MouseLeftButtonDown="Next_Click" />
-        <Image Grid.Column="4" Margin="0, 25, 0, 0" Source="/images/loop.png" MouseLeftButtonDown="Loop_Click" />
+        <Image Grid.Column="4" Margin="0, 25, 0, 0" Source="/images/loop_off.png" MouseLeftButtonDown="Loop_Click" />
 
     </Grid>
 </UserControl>
