--- a/SecondAnniversary_Lior/Project_API/SongPlayer.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongPlayer.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="600">
     
-    <Grid Background="White">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
