--- a/SecondAnniversary_Lior/Project_API/SongPlayer.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongPlayer.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Project_API"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="600">
+             d:DesignHeight="100" d:DesignWidth="300">
     
     <Grid>
         <Grid.ColumnDefinitions>
@@ -18,9 +18,9 @@
         
         <Image Grid.Column="0" Source="/images/shuffle_off.png" MouseLeftButtonDown="Shuffle_Click" />
         <Image Grid.Column="1" Source="/images/start.png" MouseLeftButtonDown="Start_Click" />
-        <Image Grid.Column="2" Source="/images/play.png" MouseLeftButtonDown="Play_Click" />
+        <Image Grid.Column="2" Source="/images/pause.png" MouseLeftButtonDown="Play_Click" />
         <Image Grid.Column="3" Source="/images/next.png" MouseLeftButtonDown="Next_Click" />
-        <Image Grid.Column="4" Margin="0, 25, 0, 0" Source="/images/loop_off.png" MouseLeftButtonDown="Loop_Click" />
+        <Image Grid.Column="4" Margin="0, 15, 0, 0" Source="/images/loop_off.png" MouseLeftButtonDown="Loop_Click" />
 
     </Grid>
 </UserControl>
