Finish basic progress bar TODO: the ability to change the progress of the bar

--- a/SecondAnniversary_Lior/Project_API/SongInterface.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongInterface.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="600">
     <Grid x:Name="grid">
-            
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <StackPanel x:Name="songPlayerSP"/>
+        <StackPanel x:Name="progressSP" Grid.Row="1"/>
+
     </Grid>
 </UserControl>
