--- a/SecondAnniversary_Lior/Project_API/SongInterface.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongInterface.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Project_API"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="600">
+             d:DesignHeight="125" d:DesignWidth="600">
     <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
 
         <StackPanel x:Name="songPlayerSP"/>
