--- a/SecondAnniversary_Lior/Project_API/SongInterface.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongInterface.xaml
@@ -5,15 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Project_API"
              mc:Ignorable="d" 
-             d:DesignHeight="125" d:DesignWidth="600">
+             d:DesignHeight="75" d:DesignWidth="800">
     <Grid x:Name="grid">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="0.2*"/>
-        </Grid.RowDefinitions>
-
-        <StackPanel x:Name="songPlayerSP"/>
-        <StackPanel x:Name="progressSP" Grid.Row="1"/>
-
+        <StackPanel Orientation="Vertical" Margin="10, 5, 0, 0" VerticalAlignment="Center">
+            <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="25" FontWeight="DemiBold"/>
+            <TextBlock Text="{Binding Path=Author}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="15"/>
+        </StackPanel>
     </Grid>
 </UserControl>
