--- a/SecondAnniversary_Lior/Project_API/SongInterface.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongInterface.xaml
@@ -8,8 +8,8 @@
              d:DesignHeight="75" d:DesignWidth="800">
     <Grid x:Name="grid">
         <StackPanel Orientation="Vertical" Margin="10, 5, 0, 0" VerticalAlignment="Center">
-            <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="25" FontWeight="DemiBold"/>
-            <TextBlock Text="{Binding Path=Author}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="15"/>
+            <TextBlock Text="{Binding Path=Name}" HorizontalAlignment="Left" FontSize="25" FontWeight="DemiBold"/>
+            <TextBlock Text="{Binding Path=Author}" HorizontalAlignment="Left" FontSize="15"/>
         </StackPanel>
     </Grid>
 </UserControl>
