--- a/SecondAnniversary_Lior/Project_API/SongInterface.xaml
+++ b/SecondAnniversary_Lior/Project_API/SongInterface.xaml
@@ -7,9 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="75" d:DesignWidth="825">
     <Grid x:Name="grid">
-        <StackPanel Orientation="Vertical" Margin="10, 5, 0, 0" VerticalAlignment="Center">
-            <TextBlock x:Name="name" HorizontalAlignment="Left" FontSize="25" FontWeight="DemiBold"/>
-            <TextBlock x:Name="author" HorizontalAlignment="Left" FontSize="15"/>
+        <StackPanel Orientation="Vertical" Margin="5, 5, 0, 0" VerticalAlignment="Center">
+            <ScrollViewer x:Name="nameScroll" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Disabled" Width="150">
+                <TextBlock x:Name="name" HorizontalAlignment="Left" FontSize="25" FontWeight="DemiBold"/>
+            </ScrollViewer>
+            <ScrollViewer x:Name="authorScroll" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Disabled" Width="150">
+                <TextBlock x:Name="author" HorizontalAlignment="Left" FontSize="15"/>
+            </ScrollViewer>
         </StackPanel>
     </Grid>
 </UserControl>
