--- a/SecondAnniversary_Lior/Project_API/MovingLyrics.xaml
+++ b/SecondAnniversary_Lior/Project_API/MovingLyrics.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="625">
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Center">
+        <TextBlock x:Name="bla"/>
+        <ScrollViewer x:Name="scroller" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Center">
             <StackPanel x:Name="lyricSP" Orientation="Vertical" HorizontalAlignment="Center"/>
         </ScrollViewer>
     </Grid>
