--- a/SecondAnniversary_Lior/Project_API/MainWindow.xaml
+++ b/SecondAnniversary_Lior/Project_API/MainWindow.xaml
@@ -35,10 +35,10 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.5*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="0.8*"/>
             <RowDefinition Height="0.8*"/>
-            <RowDefinition Height="0.8*"/>
+            <RowDefinition Height="1.2*"/>
         </Grid.RowDefinitions>
 
         <TextBlock Text="X" Background="Transparent" TextAlignment="Center" 
@@ -81,12 +81,34 @@
         <TextBlock Grid.Row="3" Text="Please pay attention to the format of the password" 
                    FontSize="20" Foreground="Red" Margin="5"/>
 
-        <Border Grid.Row="4" CornerRadius="5" Width="150" Height="30" Margin="0, 0, 0, 10"
-                BorderBrush="Black" BorderThickness="1"
-                MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
-                MouseLeftButtonDown="SendPass_MouseLeftButtonDown">
-            <TextBlock Text="Send" Margin="0"/>
-        </Border>
+        <StackPanel Grid.Row="4" Orientation="Vertical">
+            <Border CornerRadius="5" Width="150" Height="30" Margin="0, 25, 0, 0"
+                    BorderBrush="Black" BorderThickness="1" x:Name="send"
+                    MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
+                    MouseLeftButtonDown="SendPass_MouseLeftButtonDown">
+                <TextBlock Text="Send" Margin="0"/>
+            </Border>
+            <StackPanel Orientation="Horizontal" x:Name="buttons" Margin="0, 10, 0, 0">
+                <Border CornerRadius="5" Width="95" Height="30" Margin="2.5, 0, 5, 0"
+                        BorderBrush="Black" BorderThickness="1" Visibility="Hidden"
+                        MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
+                        MouseLeftButtonDown="Anniversary_MouseLeftButtonDown" x:Name="anniversary">
+                    <TextBlock Text="Anniversary" Margin="0" FontSize="18" VerticalAlignment="Center"/>
+                </Border>
+                <Border CornerRadius="5" Width="95" Height="30" Margin="0, 0, 5, 0"
+                        BorderBrush="Black" BorderThickness="1" Visibility="Hidden"
+                        MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
+                        MouseLeftButtonDown="End_MouseLeftButtonDown" x:Name="end">
+                    <TextBlock Text="The End" Margin="0" FontSize="18" VerticalAlignment="Center"/>
+                </Border>
+                <Border CornerRadius="5" Width="95" Height="30" Margin="0, 0, 5, 0"
+                        BorderBrush="Black" BorderThickness="1" Visibility="Hidden"
+                        MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
+                        MouseLeftButtonDown="Breakup_MouseLeftButtonDown" x:Name="breakup">
+                    <TextBlock Text="Breakup" Margin="0" FontSize="18" VerticalAlignment="Center"/>
+                </Border>
+            </StackPanel>
+        </StackPanel>
 
     </Grid>
 </Window>
