Started working on BreakupWinodw Added the list of song Added the text TODO: the timing of the recording

--- a/SecondAnniversary_Lior/Project_API/BreakupWindow.xaml
+++ b/SecondAnniversary_Lior/Project_API/BreakupWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Project_API"
         mc:Ignorable="d"
         Title="BreakupWindow" Height="450" Width="825">
-    <Grid>
+    <Grid x:Name="grid">
         
     </Grid>
 </Window>
